Fix ApiBearerAuth en los controladores para documentar por swagger
