# api-gateway/src/auth/auth.controller.ts
@@ -1,9 +1,10 @@
 import { Body, Controller, Post, Req, UseGuards } from '@nestjs/common';
-import { ApiTags } from '@nestjs/swagger';
+import { ApiBody, ApiTags } from '@nestjs/swagger';
 
 import { AuthService } from './auth.service';
 import { CreateUserDto } from 'src/user/dto/create-user.dto';
 import { LocalAuthGuard } from './guards/local-auth.guard';
+
 
 @ApiTags('Autentication')
 @Controller('/api/v1/auth')
@@ -13,6 +14,24 @@ export class AuthController {
     ){}
     @UseGuards(LocalAuthGuard)
     @Post('sign-in')
+    @ApiBody({
+        schema: {
+            type: 'object',
+            properties: {
+                username: {
+                    type: 'string',
+                    description: 'The username of the user',
+                    example: 'usuario',
+                },
+                password: {
+                    type: 'string',
+                    description: 'The password of the user',
+                    example: 'password123',
+                },
+            },
+        },
+        description: 'Credentials for user authentication',
+    })
     async signIn(@Req() req){
         return await this.authService.singIn(req.user)
     }
